# dStorage

./: CONTRIBUTING.md  LICENSE.txt  Needed.txt  README.md  README.txt  description.txt  descrição.txt  pyproject.toml  requirements.txt  setup.py  storm.db
dStorage/: __init__.py  core.py
dStorage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: 1stApp.py  2stApp.py  README
