[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "dStorage"
author = "Leonardo de Araújo Lima"
author-email = "leonardo@asl-sl.com.br"
home-page = "https://github.com/leo0-07/dStorage"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
description-file = "README.md"

